--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
+
 {
   "expo": {
-    "name": "VirtuFit",
-    "slug": "VirtuFit",
+    "name": "Ervenista",
+    "slug": "Ervenista",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/natively-dark.png",
@@ -10,11 +11,11 @@
     "splash": {
       "image": "./assets/images/natively-dark.png",
       "resizeMode": "contain",
-      "backgroundColor": "#000000"
+      "backgroundColor": "#081F5C"
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.Natively",
+      "bundleIdentifier": "com.anonymous.Ervenista",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
@@ -22,10 +23,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/natively-dark.png",
-        "backgroundColor": "#000000"
+        "backgroundColor": "#081F5C"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.Natively"
+      "package": "com.anonymous.Ervenista"
     },
     "web": {
       "favicon": "./assets/images/final_quest_240x240.png",
@@ -36,7 +37,7 @@
       "expo-router",
       "expo-web-browser"
     ],
-    "scheme": "natively",
+    "scheme": "ervenista",
     "experiments": {
       "typedRoutes": true
     },
@@ -44,5 +45,5 @@
       "router": {}
     }
   },
-  "scheme": "VirtuFit"
+  "scheme": "Ervenista"
 }
