--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/images/natively-dark.png",
       "resizeMode": "contain",
-      "backgroundColor": "#081F5C"
+      "backgroundColor": "#7226FF"
     },
     "ios": {
       "supportsTablet": true,
@@ -23,7 +23,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/natively-dark.png",
-        "backgroundColor": "#081F5C"
+        "backgroundColor": "#7226FF"
       },
       "edgeToEdgeEnabled": true,
       "package": "com.anonymous.Ervenista"
